--- a/trunk/skin/frontend/smartwave/porto/css/custom.css
+++ b/trunk/skin/frontend/smartwave/porto/css/custom.css
@@ -43,8 +43,18 @@ body,
 {
   margin:0;
 }
+
+
 /*===UTILITIES / HELPER ====*/
 
+.disable-bttn
+{
+    pointer-events: none;
+    cursor: default;
+    background: #333!important;
+    color: #fff!important;
+    border: 1px solid #333!important;
+}
 .img-responsive
 {
     display: block;
