--- a/trunk/skin/frontend/smartwave/porto/css/custom.css
+++ b/trunk/skin/frontend/smartwave/porto/css/custom.css
@@ -38,11 +38,25 @@ body,
   padding: 1.5rem;
   font-size: 16px;
 }
+.offer-deal .item .content h3 > a
+{
+    background: #f5f5f5;
+    padding: 0 1.75rem;
+    opacity: 0.9;
+}
+.offer-deal .item .content h3>a:hover
+{
+    background: #333;
+    color:#fff;
+    opacity: 1;
+    text-decoration: none;
+}
 /*====CHECKOUT======*/
 .block-progress dd
 {
   margin:0;
 }
+
 
 
 /*===UTILITIES / HELPER ====*/
