added bg color to links homepage

--- a/trunk/skin/frontend/smartwave/porto/css/custom.css
+++ b/trunk/skin/frontend/smartwave/porto/css/custom.css
@@ -60,6 +60,11 @@ body,
     opacity: 1;
     text-decoration: none;
 }
+/*===PRODUCT PAGE====*/
+.tier-prices
+{
+    display: none!important;
+}
 /*====CHECKOUT======*/
 .block-progress dd
 {
