--- a/trunk/skin/frontend/smartwave/porto/css/custom.css
+++ b/trunk/skin/frontend/smartwave/porto/css/custom.css
@@ -14,6 +14,19 @@ body,
 {
     background:#f6f6f6;
 }
+/*====WEBFORMS ===*/
+#webform_2_form .fieldset .legend {display:none;}
+#webform_2_form .fieldset {padding:10px;}
+.catalogsearch-advanced-result p:last-child {}
+#webform_2_form .buttons-set {padding:10px;}
+#webform_2_form .field {margin-bottom:15px;}
+#webform_2_form .form-list li label 
+{padding: 10px;
+background: #eee;margin-bottom:0px;
+font-family: 'chunkfiveroman';
+font-weight: normal;font-size:20px;
+}
+.webforms-success-text {padding-left:10px;}
 /*======CATEGORY PAGE=====*/
 .category_description
 {
