--- a/trunk/skin/frontend/smartwave/porto/css/custom.css
+++ b/trunk/skin/frontend/smartwave/porto/css/custom.css
@@ -15,6 +15,15 @@ body,
     background:#f6f6f6;
 }
 /*====WEBFORMS ===*/
+#webform_1_form .fieldset .legend {display:none;}
+#webform_1_form .fieldset {padding:10px;}
+.cms-contact .side2 p:last-child {display:none;}
+#webform_1_form .buttons-set {padding:10px;}
+
+#webform_1_form .form-list li label {padding: 10px;
+background: #eee;margin-bottom:0px;
+float: left;font-family: 'chunkfiveroman';
+font-weight: normal;font-size:20px;}
 #webform_2_form .fieldset .legend {display:none;}
 #webform_2_form .fieldset {padding:10px;}
 .catalogsearch-advanced-result p:last-child {}
