--- a/trunk/skin/frontend/smartwave/porto/css/custom.css
+++ b/trunk/skin/frontend/smartwave/porto/css/custom.css
@@ -1,4 +1,15 @@
 /*======TYPOGRAPHY======*/
+@font-face {
+    font-family: 'chunkfiveroman';
+    src: url('../font/chunky-webfont.eot');
+    src: url('../font/chunky-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../font/chunky-webfont.woff') format('woff'),
+         url('../font/chunky-webfont.ttf') format('truetype'),
+         url('../font/chunky-webfont.svg#chunkfiveroman') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body,
 .header-container.type20 .main-nav ul.menu>li>a
 {
