--- a/trunk/skin/frontend/smartwave/porto/css/custom.css
+++ b/trunk/skin/frontend/smartwave/porto/css/custom.css
@@ -25,29 +25,22 @@ body,
 {
     background:#f6f6f6;
 }
-/*====WEBFORMS ===*/
-#webform_1_form .fieldset .legend {display:none;}
-#webform_1_form .fieldset {padding:10px;}
-.cms-contact .side2 p:last-child {display:none;}
-#webform_1_form .buttons-set {padding:10px;}
+/*======= WEBFORMS =======*/
 
-#webform_1_form .form-list li label {padding: 10px;
-background: #eee;margin-bottom:0px;
-float: left;font-family: 'chunkfiveroman';
-font-weight: normal;font-size:20px;}
-#webform_2_form .fieldset .legend {display:none;}
-#webform_2_form .fieldset {padding:10px;}
-.catalogsearch-advanced-result p:last-child {}
-#webform_2_form .buttons-set {padding:10px;}
-#webform_2_form .field {margin-bottom:15px;}
-#webform_2_form .form-list li label 
-{padding: 10px;
-background: #eee;margin-bottom:0px;
-font-family: 'chunkfiveroman';
-font-weight: normal;font-size:20px;
+.fieldset .legend {display:none;}
+.fieldset {padding:10px;}
+.buttons-set {padding:10px;}
+.form-list li label {
+    padding: 10px;
+    background: #eee;margin-bottom:0px;
+    float: left;
+    font-family: 'chunkfiveroman';
+    font-weight: normal;font-size:20px;
 }
 .webforms-success-text {padding-left:10px;}
+
 /*======CATEGORY PAGE=====*/
+
 .category_description
 {
   padding:30px 0;
@@ -93,6 +86,8 @@ font-weight: normal;font-size:20px;
     opacity: 1;
     text-decoration: none;
 }
+
+
 /*===PRODUCT PAGE====*/
 .tier-prices
 {
@@ -104,7 +99,48 @@ font-weight: normal;font-size:20px;
   margin:0;
 }
 
-
+.cathead {
+    background: #FFFFFF;
+    padding: 30px 40px 30px 40px;
+    -webkit-box-shadow: 0 10px 6px -6px #777;
+    -moz-box-shadow: 0 10px 6px -6px #777;
+    box-shadow: 0 10px 6px -6px #777;
+    border: solid 1px #ccc;
+}
+.cathead h1 {
+    font-family: 'chunkfiveroman';
+    color: #00A7EE;
+    padding: 0px;
+    margin: 0px;
+    font-size: 50px;
+    text-align: left;
+    line-height: 5.7rem;
+    text-transform: uppercase;
+    margin-bottom: 35px;
+}
+.cms-page-view h3 {
+    font-family: 'chunkfiveroman';
+    font-weight: normal;
+    padding: 30px 40px 30px 10px;
+    color: #263775;
+    border-bottom: 1px solid #444444;
+}
+.cms-page-view .sidewrap h4 {
+    font-size: 25px;
+    padding-left: 10px;
+    margin-bottom: 20px;
+    line-height: 120%;
+}
+.cms-page-view h4 {
+    font-family: 'chunkfiveroman';
+    font-weight: normal;
+    color: #D80000;
+    font-size: 18px;
+}
+.cms-page-view .sidewrap h4 {font-size:25px;padding-left:10px;margin-bottom:20px;line-height:120%}
+.cms-page-view .sidewrap h5 {margin-bottom:30px;font-size:17px;font-family: 'chunkfiveroman';padding-left:10px;font-weight:normal;line-height:120%;}
+.cms-page-view .sidewrap h6 {color:#263775;margin-bottom:10px;font-size:20px;font-family: 'chunkfiveroman';padding-left:10px;font-weight:normal;line-height:120%;}
+.cms-page-view .sidewrap p strong {color:#333;}
 
 /*===UTILITIES / HELPER ====*/
 
