--- a/trunk/skin/frontend/smartwave/porto/css/custom.css
+++ b/trunk/skin/frontend/smartwave/porto/css/custom.css
@@ -122,7 +122,6 @@ body,
     font-weight: normal;
     font-family: 'chunkfiveroman';
     color: #003360;
-    padding: 0px;
     margin: 0px;
     font-size: 32px;
     text-align: left;
@@ -131,13 +130,12 @@ body,
 .cms-page-view h3 {
     font-family: 'chunkfiveroman';
     font-weight: normal;
-    padding: 30px 40px 30px 10px;
+    padding: 1rem 1.5rem;
     color: #263775;
     border-bottom: 1px solid #444444;
 }
 .cms-page-view .sidewrap h4 {
     font-size: 25px;
-    padding-left: 10px;
     margin-bottom: 20px;
     line-height: 120%;
 }
@@ -154,6 +152,9 @@ body,
 
 /*===UTILITIES / HELPER ====*/
 
+.nopadding{padding:0!important;}
+.nopading-right{padding-right: 0!important;}
+.nopadding-left{padding-left:0!important;}
 .disable-bttn
 {
     pointer-events: none;
