--- a/trunk/skin/frontend/smartwave/porto/css/custom.css
+++ b/trunk/skin/frontend/smartwave/porto/css/custom.css
@@ -145,9 +145,9 @@ body,
     color: #D80000;
     font-size: 18px;
 }
-.cms-page-view .sidewrap h4 {font-size:25px;padding-left:10px;margin-bottom:20px;line-height:120%}
-.cms-page-view .sidewrap h5 {margin-bottom:30px;font-size:17px;font-family: 'chunkfiveroman';padding-left:10px;font-weight:normal;line-height:120%;}
-.cms-page-view .sidewrap h6 {color:#263775;margin-bottom:10px;font-size:20px;font-family: 'chunkfiveroman';padding-left:10px;font-weight:normal;line-height:120%;}
+.cms-page-view .sidewrap h4 {font-size:25px;margin-bottom:20px;line-height:120%}
+.cms-page-view .sidewrap h5 {margin-bottom:30px;font-size:17px;font-family: 'chunkfiveroman';font-weight:normal;line-height:120%;}
+.cms-page-view .sidewrap h6 {color:#263775;margin-bottom:10px;font-size:20px;font-family: 'chunkfiveroman';font-weight:normal;line-height:120%;}
 .cms-page-view .sidewrap p strong {color:#333;}
 
 /*===UTILITIES / HELPER ====*/
