adding new font

--- a/trunk/skin/frontend/smartwave/porto/css/custom.css
+++ b/trunk/skin/frontend/smartwave/porto/css/custom.css
@@ -101,7 +101,7 @@ body,
 
 .cathead {
     background: #FFFFFF;
-    padding: 30px 40px 30px 40px;
+    padding: 1.5rem;
     -webkit-box-shadow: 0 10px 6px -6px #777;
     -moz-box-shadow: 0 10px 6px -6px #777;
     box-shadow: 0 10px 6px -6px #777;
