--- a/trunk/skin/frontend/smartwave/porto/css/custom.css
+++ b/trunk/skin/frontend/smartwave/porto/css/custom.css
@@ -120,7 +120,7 @@ body,
     color: #00A7EE;
     padding: 0px;
     margin: 0px;
-    font-size: 50px;
+    font-size: 3rem;
     text-align: left;
     line-height: 5.7rem;
     text-transform: uppercase;
@@ -131,7 +131,7 @@ body,
     font-family: 'chunkfiveroman';
     color: #003360;
     margin: 0px;
-    font-size: 32px;
+    font-size:2.5rem;
     text-align: left;
     line-height: 2.7rem;
 }
