--- a/trunk/skin/frontend/smartwave/porto/css/custom.css
+++ b/trunk/skin/frontend/smartwave/porto/css/custom.css
@@ -84,7 +84,7 @@ body,
 }
 .offer-deal .item .content{
     position: absolute;
-    bottom:15%;
+    bottom:0;
     left:40%;
 }
 .offer-deal .item .content h3>a:hover
